--- a/style.css
+++ b/style.css
@@ -100,6 +100,10 @@ textarea {
   font-weight: bold;
 }
 
+.salaire {
+  font-size: 1.6em;
+}
+
 @media (max-width: 768px) {
   .main-container {
     flex-direction: column;
